--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -1,67 +1,86 @@
-.footer{
+.footer {
     position: relative;
     z-index: 1;
     padding-top: 180px;
     padding-bottom: 65px;
     background-color: $white;
-    
-    &::before{
+    @include xl {
+        padding-top: 150px;
+    }
+    @include lg {
+        padding-top: 100px;
+    }
+    @include md {
+        padding-top: 80px;
+    }
+    @include sm {
+        padding-top: 60px;
+        padding-bottom: 40px;
+    }
+    &::before {
         position: absolute;
         content: "";
         left: 0;
         top: 0;
         width: 100%;
         height: 100%;
-         background-image: url('../img/footer-shap.png');
-         background-position: top center;
-         background-repeat: no-repeat;
-         background-size: contain;
-         z-index: -1;
+        background-image: url('../img/footer-shap.png');
+        background-position: top center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        z-index: -1;
     }
-    @include sm{
-        padding-top: 80px;
-        padding-bottom: 40px;
-    }
-    &-top{
+    &-top {
         text-align: center;
-        h5{
+        h5 {
             margin-top: 25px;
             @include font-32;
         }
         .copytoclipboard-inner {
             margin: 22px auto 55px;
             max-width: 750px;
-            @include sm{
+            @include md {
+                padding: 0 8%;
+            }
+            @include sm {
                 margin: 22px auto 40px;
             }
         }
-        .logo{
-            img{
+        .logo {
+            img {
                 max-width: 358px;
-                margin:0 auto;
-                @include sm{
+                margin: 0 auto;
+                @include sm {
                     max-width: 150px;
                 }
             }
         }
-        h4{
+        h4 {
             color: $white;
-            text-transform: uppercase; 
+            text-transform: uppercase;
             display: inline-block;
             margin-bottom: 38px;
-            @include sm{
-                margin-bottom: 28px;
+            @include lg {
+                margin-bottom: 60px;
+            }
+            @include md {
+                margin-bottom: 44px;
+            }
+            @include sm {
+                margin-bottom: 40px;
             }
         }
     }
-    &-bottom{
-        .boxedBtn{
+    &-bottom {
+        .boxedBtn {
             padding: 24px;
             @include font-32;
             font-weight: 700;
-            text-shadow: -4px 4px 0px rgba(2, 97, 207, 0.50);
-            -webkit-text-stroke-width: 1.5px;
+            // text-shadow: -4px 4px 0px rgba(2, 97, 207, 0.50);
+            -webkit-text-stroke-width: 2px;
             -webkit-text-stroke-color: #16161B;
+            $black: #16161B;
+            text-shadow: 0px 0px $black;
             color: $white;
             text-transform: uppercase;
             border-radius: 16px;
@@ -70,43 +89,46 @@
             box-shadow: 5px 4px 0px 0px $black;
             max-width: 450px;
             display: inline-block;
-            @include xl{
+            font-family: "Baloo", sans-serif;
+            @include xl {
                 font-size: 20px;
-                padding: 20px 12px;
+                padding: 1rem 30px;
             }
-            @include lg{
-                font-size: 20px;
-                padding: 20px 12px;
+            // @include lg {
+            //     font-size: 20px;
+            //     padding: 1rem 30px;
+            // }
+            @include mmd {
+                padding: 14px 26px;
             }
-            @include mmd{
-                font-size: 20px;
-                padding: 12px 12px;
-            }
-            
-            @include sm{
+            @include sm {
                 margin: 0 auto;
-             }
-            .btnLogo{
+            }
+            @include ssm {
+                font-size: 20px !important;
+                padding: 14px 20px;
+            }
+            .btnLogo {
                 max-width: 48px;
                 display: inline-block;
                 margin-right: 15px;
-                @include lg{
+                @include lg {
                     margin-right: 10px;
                 }
-                @include mmd{
+                @include mmd {
                     margin-right: 10px;
                 }
-                @include ssm{
+                @include ssm {
                     max-width: 30px;
                     margin-right: 10px;
                 }
             }
         }
     }
-    .copytoclipboard{
+    .copytoclipboard {
         background-color: $white;
         padding: 15px 18px;
-        input{
+        input {
             background-color: $white;
         }
     }
