--- a/src/assets/scss/_marquee.scss
+++ b/src/assets/scss/_marquee.scss
@@ -1,14 +1,20 @@
 .marquee {
     border: 4px solid #343230;
+    border-left: none;
+    border-right: none;
     background: $primary;
     // transform: translateY(35px) rotate(2.057deg);
     padding: 27px 0;
-    width: 106%;
+    width: 100%;
     // margin-left: -3%;
     position: relative;
     z-index: 99;
+    @include sm {
+        padding: 20px 0;
+    }
     .rfm-initial-child-container {
         gap: 32px;
+        overflow: hidden;
         .rfm-child {
             figure {
                 rotate: -2deg;
