--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -9,7 +9,7 @@
     transform: translate(0, 0);
 }
 
-@mixin font-250{
+@mixin font-250 {
     font-size: 250px;
     line-height: 120%;
     @include xxl {
@@ -22,7 +22,7 @@
         font-size: 140px;
     }
     @include md {
-        font-size: 120px;
+        font-size: 110px;
     }
     @include sm {
         font-size: 100px;
@@ -42,13 +42,15 @@
         font-size: 120px;
     }
     @include md {
-        font-size: 100px;
+        font-size: 90px;
     }
     @include sm {
-        font-size: 70px;
+        font-size: 50px;
+    }
+    @include sm {
+        font-size: 44px;
     }
 }
-
 
 @mixin font-147 {
     font-size: 147px;
@@ -66,7 +68,6 @@
         font-size: 50px;
     }
 }
-
 
 @mixin font-120 {
     font-size: 120px;
@@ -145,7 +146,6 @@
         font-size: 25px;
     }
 }
-
 
 @mixin font-32 {
     font-size: 32px;
