--- a/src/assets/scss/_eggshellomics.scss
+++ b/src/assets/scss/_eggshellomics.scss
@@ -15,6 +15,12 @@
             width: 40%;
             bottom: 0;
             left: 0;
+            @include sm {
+                position: unset;
+                width: 50%;
+                margin: auto;
+                margin-top: 20px;
+            }
             img {
                 max-width: 630px;
             }
@@ -65,11 +71,12 @@
         }
         @include sm {
             margin-top: 30px;
-            margin-bottom: 75px;
+            margin-bottom: 0;
             padding: 50px;
             border-radius: 20px;
             grid-template-columns: 1fr;
             gap: 24px;
+            box-shadow: 0 0 0;
         }
         @include ssm {
             padding: 34px;
@@ -85,19 +92,20 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            & img {
-                max-width: 140px;
-                margin-bottom: 6px;
-                @include sm {
-                    max-width: 70px;
-                }
-            }
             @include md {
                 padding: 40px 20px;
             }
             @include sm {
                 border-radius: 15px;
                 padding: 30px 10px;
+                box-shadow: 0px 6px 0px 0px #343230;
+            }
+            & img {
+                max-width: 140px;
+                margin-bottom: 6px;
+                @include sm {
+                    max-width: 70px;
+                }
             }
             h5 {
                 margin-bottom: 0;
