--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -103,6 +103,7 @@
             }
             @include sm {
                 margin: 0 auto;
+                -webkit-text-stroke-width: 0px;
             }
             @include ssm {
                 font-size: 18px !important;
